Fix text ascii art page not fitting in screen

--- a/webapp/static/main-v2.css
+++ b/webapp/static/main-v2.css
@@ -253,6 +253,10 @@ button:active {
     padding: 16px 0;
 }
 
+.text-art {
+    height: 350px;
+}
+
 
 .text .field {
     display: flex;
